--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color:rgb(240, 240, 240);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
