--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color:rgb(240, 240, 240);">
+  <body style="width:auto;height:auto;background-color:rgb(221, 221, 221);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
